Migration to new APIs, part V: introduce new interface PageSelectorList in CSSHandler.startPage/endPage.